--- a/src/viz.jinja
+++ b/src/viz.jinja
@@ -73,13 +73,13 @@
         <!-- Amount of Force -->
         <div>
             <label for="">Force</label>
-            <input type="range" name="" min="10" max="800" step="1" value="100" onchange="repulsion_strength=this.value;restart();">
+            <input type="range" id="repulsion_strength" min="10" max="800" step="1" value="100">
         </div>
 
         <!-- Edge Opacity -->
         <div>
             <label for="">Opacity</label>
-            <input type="range" name="edge_opacity" id="edge_opacity" min="0" max="1" step="0.01" value="0.6" onchange="edge_opacity=this.value;">
+            <input type="range" id="edge_opacity" min="0" max="1" step="0.01" value="0.6">
         </div>
 
         <!-- Color By -->
@@ -182,33 +182,64 @@ cola.groupCompactness = group_compactness;
 
 var min_confidence = 0;
 var max_confidence = 1;
-var width = d3.scaleLinear()
-              .domain([min_confidence, max_confidence])
-              .range([0.2, 2]);
+var width = d3.scaleLinear().domain([min_confidence, max_confidence]).range([0.2, 2]);
 
 var color = {
     {% for attribute_name, metadata in attributes.items() if metadata['display'] in ['color_scale'] %}
-        '{{attribute_name}}':d3.scaleLinear().domain({{ metadata['domain'] }}).range({{ metadata['range'] }}),
+        '{{attribute_name}}':d3.scaleLinear().domain({{ metadata['domain'] }}).range({{ metadata['range'] }}).nice(),
     {% endfor %}
-    {% for attribute_name, metadata in attributes.items() if metadata['display'] in ['color_category', 'box'] %}
+    {% for attribute_name, metadata in attributes.items() if metadata['display'] in ['box'] %}
         '{{attribute_name}}': d3.scaleOrdinal(d3.schemePastel1),
     {% endfor %}
+    {% for attribute_name, metadata in attributes.items() if metadata['display'] in ['color_category'] %}
+        '{{attribute_name}}': d3.scaleOrdinal(d3.schemeCategory10),
+    {% endfor %}
 };
-
-var group_color = d3.scaleOrdinal(d3.schemePastel1);  // TODO: remove
 
 var triangle = d3.symbol().type(d3.symbolTriangle).size(200)(),
      circle = d3.symbol().type(d3.symbolCircle).size(200)(),
      diamond = d3.symbol().type(d3.symbolDiamond).size(200)();
 
-var display_type = d3.scaleOrdinal()
-                     .domain(['protein', 'TF', 'metabolite'])
-                     .range([circle, triangle, diamond] );
+var display_type = d3.scaleOrdinal().domain(['protein', 'TF', 'metabolite']).range([circle, triangle, diamond] );
 
-var size = d3.scalePow()
-             .exponent(1)
-             .domain([1, 100])
-             .range([8, 24]);
+var size = d3.scalePow().exponent(1).domain([1, 100]).range([8, 24]);
+
+
+/////////////////////////////////////////////////////////////////////////////
+                      ///////    Legends    ///////
+/////////////////////////////////////////////////////////////////////////////
+
+// SYMBOL LEGEND
+var shapes = svg.append("g")
+                .attr("class", "legend_Symbol")
+                .attr("transform", "translate(20, 20)")
+                .call(d3.legendSymbol()
+                        .scale(display_type)
+                        .orient("vertical")
+                        .title("Node Types"));
+
+// COLOR LEGEND
+var colors = svg.append("g")
+                .attr("class", 'legendLinear color_Legend')
+                .attr("transform", "translate(20,140)")
+                .call(d3.legendColor()
+                        .shapeWidth(30)
+                        .orient('vertical')
+                        .scale(color[colorBy])
+                        .title(colorBy));
+
+// SIZE LEGEND
+// var sizes = svg.append("g")
+//                 .attr("class", "legendSizeLine")
+//                 .attr("transform", "translate(20, 500)")
+//                 .call(d3.legendSize()
+//                         .scale(width)
+//                         .shape("line")
+//                         .orient("vertical")
+//                         // .labels(["tiny", "small", "medium", "large", "huge"])
+//                         .shapeWidth(40)
+//                         .labelAlign("start")
+//                         .shapePadding(10))
 
 
 /////////////////////////////////////////////////////////////////////////////
@@ -216,7 +247,7 @@ var size = d3.scalePow()
 /////////////////////////////////////////////////////////////////////////////
 
 var linked = {};
-graph.links.forEach(function(d) { linked[d.source + "," + d.target] = true; });
+graph.links.forEach(function(d) { linked[d.source_name + "," + d.target_name] = true; });
 
 function isConnected(a, b) {
     return linked[a.id + "," + b.id] || linked[b.id + "," + a.id] || a.id == b.id;
@@ -280,7 +311,6 @@ graph.nodes.forEach(function (n) {
 // function padding(group) {}
 
 
-
 /////////////////////////////////////////////////////////////////////////////
                       ///////    Draw Graph    ///////
 /////////////////////////////////////////////////////////////////////////////
@@ -298,10 +328,7 @@ var link = g.selectAll(".link")
                 if (isNumber(d.cost) && d.cost >= 0) { return width(1-d.cost); }
                 else { return default_stroke_width; }
             })
-            .style("stroke", function(d) {
-                if (isNumber(d.score) && d.score >= 0) { return color[colorBy](d.score); }
-                else { return default_link_color; }
-            })
+            .style("stroke", default_link_color)
             .style("opacity", edge_opacity);
 
 
@@ -309,13 +336,10 @@ var node = g.selectAll(".node")
             .data(graph.nodes)
             .enter().append("path")
             .attr("class", "node")
-            .attr("id", function(d) { return d.id; })
-            .attr("d",d => display_type(d.type))
+            .attr("id", d => d.id)
+            .attr("d", d => display_type(d.type))
             // .size(function(d) { return Math.PI * Math.pow(size(d.size) || nominal_base_node_size, 2); })
-            .style(tocolor, function(d) {
-                if (isNumber(d[colorBy])) { return color[colorBy](d[colorBy]); }
-                else { return default_node_color; }
-            })
+            .style(tocolor, d => color[colorBy](d[colorBy]))
             .style("stroke-width", default_stroke_width)
             .style(towhite, "white")
             // .on("mousedown", function(d) { set_focus(d); }).on("mouseup", function(d) { remove_focus(d); })
@@ -326,7 +350,8 @@ var text = g.selectAll(".text")
             .data(graph.nodes)
             .enter().append("text")
             .attr("dy", ".35em")
-            .style("font-size", nominal_text_size + "px");
+            .style("font-size", nominal_text_size + "px")
+            .attr("font-family", "sans-serif");
 
 if (text_center) {
     text.text(function(d) { return d.id; })
@@ -336,12 +361,18 @@ if (text_center) {
         .text(function(d) { return '\u2002' + d.id; });
 }
 
-
 function recolor() {
-    node.style(tocolor, function(d) {
-        if (isNumber(d[colorBy])) { return color[colorBy](d[colorBy]); }
-        else { return default_node_color; }
-    });
+    node.style(tocolor, (d) => (color[colorBy](d[colorBy]) || default_node_color) );
+
+    colors.remove()
+    colors = svg.append("g")
+                .attr("class", 'legendLinear color_Legend')
+                .attr("transform", "translate(20,140)")
+                .call(d3.legendColor()
+                        .shapeWidth(30)
+                        .orient('vertical')
+                        .scale(color[colorBy])
+                        .title(colorBy));
 }
 
 /////////////////////////////////////////////////////////////////////////////
@@ -366,12 +397,11 @@ function restart() {
                    else { return default_stroke_width; }
                })
                .style("stroke", function(d) {
-                  if (isNumber(d.score) && d.score >= 0) { return color[colorBy](d.score); }
+                   if (isNumber(d.score) && d.score >= 0) { return color[colorBy](d.score); }
                    else { return default_link_color; }
                })
                .style("opacity", edge_opacity)
                .merge(link);
-
 
     // Changing what the grouping is
     if (groupBy) {
@@ -382,14 +412,8 @@ function restart() {
                      .insert('rect', '.link')
                      .attr('rx',5)
                      .attr('ry',5)
-                     // .attr('rx',30)
-                     // .attr('ry',30)
-                     .style("fill", function (d) { return group_color(d.id); })
+                     .style("fill", function (d) { return color[groupBy](d.id); })
                      .style("opacity", 0.7)
-                     // .style("stroke", function (d) { return group_color(d.id); })
-                     // .style("stroke-width", function (d) { return 20; })
-                     // .style("stroke-dasharray", function (d) { return "5, 5"; })
-                     // .style("stroke-linecap", function (d) { return "round"; })
                      .call(cola.drag);
 
         label = label.data([]);
@@ -398,6 +422,7 @@ function restart() {
                      .enter()
                      .insert('text', '.group')
                      .attr("class", "label")
+                     .attr("font-family", "sans-serif")
                      .text(function (d) { return d.id; })
                      .call(cola.drag);
 
@@ -423,7 +448,6 @@ function restart() {
             .start(50, 0, 50);
     }
 
-
     cola.on('tick', function () {
 
         node.attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; });
@@ -447,11 +471,10 @@ function restart() {
                  .attr("y", function (d) { return d.bounds.y + d.padding / 2; });
         }
     });
-
 }
 
 restart();
-
+recolor();
 
 /////////////////////////////////////////////////////////////////////////////
                       ///////    Zoom    ///////
@@ -473,8 +496,6 @@ node.on("mouseover", function(d) { set_highlight(d); }).on("mouseout", function(
 
 function set_highlight(d) {
     svg.style("cursor", "pointer");
-    if (focus_node !== null) d = focus_node;
-    highlight_node = d;
 
     if (highlight_color != "white") {
         node.style(towhite, function(o) {
@@ -490,17 +511,9 @@ function set_highlight(d) {
 }
 
 function remove_highlight() {
-    highlight_node = null;
-    if (focus_node === null) {
-        svg.style("cursor", "move");
-        if (highlight_color != "white") {
-            node.style(towhite, "white");
-            text.style("font-weight", "normal");
-            link.style("stroke", function(o) {
-                return (isNumber(o.score) && o.score >= 0) ? color[colorBy](o.score) : default_link_color
-            });
-        }
-    }
+    node.style(towhite, "white");
+    text.style("font-weight", "normal");
+    link.style("stroke", default_link_color);
 }
 
 /////////////////////////////////////////////////////////////////////////////
@@ -513,8 +526,6 @@ node.on("click", function(d) { if (shiftKey) {shiftKey = false; window.open("htt
 
 function set_focus(d) {
     // d3.event.stopPropagation();
-
-    if (shiftKey) {shiftKey = false; console.log('here'); window.open("http://www.genecards.org/cgi-bin/carddisp.pl?gene="+d.id);}
     if (highlight_trans < 1) {
         node.style("opacity", function(o) { return isConnected(d, o) ? 1 : highlight_trans; });
         text.style("opacity", function(o) { return isConnected(d, o) ? 1 : highlight_trans; });
@@ -526,14 +537,12 @@ function set_focus(d) {
 
 function remove_focus() {
     // d3.event.stopPropagation();
-
-    focus_node = null;
     node.style("opacity", 1);
     text.style("opacity", 1);
     link.style("opacity", edge_opacity);
     group.style("opacity", 0.6);
     label.style("opacity", 1);
-    if (highlight_node === null) { remove_highlight(); }
+    remove_highlight();
 }
 
 var shiftKey;
@@ -572,84 +581,32 @@ $("#search_for_node").on('input', function () {
     else { remove_focus(); remove_highlight(); }
 });
 
-// Additional feature: toggle showing all edges / only solution edges
 $("#show_only_solution_edges").change(function() {
     show_only_solution_edges = this.checked; restart();
 });
 
-// Color by a specific attribute on the nodes
 $("#colorBy").change(function() {
-    svg.selectAll(".legendLinear").style("opacity",0);
-    svg.select("."+this.value+"Legend").style("opacity",1);
     colorBy = this.value; recolor();
 });
 
-// Group by a specific attribute on the nodes
 $("#groupBy").change(function() {
     if(this.value) { groupBy = this.value; restart(); }
     else { groupBy = null; restart(); }
 });
 
-// Turn off the force
 $("#turnForceOff").change(function() {
     turnForceOff = this.checked; restart();
 });
 
-// Change edge opacity
 $("#edge_opacity").change(function(){
-    link.style("opacity", function (d) { return edge_opacity; })
+    edge_opacity = this.value;
+    link.style("opacity", edge_opacity )
 })
 
-
-/////////////////////////////////////////////////////////////////////////////
-                      ///////    Legends    ///////
-/////////////////////////////////////////////////////////////////////////////
-
-// SYMBOL LEGEND
-svg.append("g")
-   .attr("class", "legendSymbol")
-   .attr("transform", "translate(20, 20)");
-
-var legendPath = d3.legendSymbol()
-                    .scale(display_type)
-                    .orient("vertical")
-                    .title("Node Types");
-
-svg.select(".legendSymbol").call(legendPath);
-
-
-// // SIZE LEGEND
-// svg.append("g")
-//    .attr("class", "legendSizeLine")
-//    .attr("transform", "translate(20, 500)");
-
-// var legendSizeLine = d3.legendSize()
-//                        .scale(width)
-//                        .shape("line")
-//                        .orient("vertical")
-//                        // .labels(["tiny", "small", "medium", "large", "grand"])
-//                        .shapeWidth(40)
-//                        .labelAlign("start")
-//                        .shapePadding(10);
-
-// svg.select(".legendSizeLine").call(legendSizeLine);
-
-{% for attribute_name, metadata in attributes.items() if metadata['display'] in ['color_scale', 'color_category'] %}
-
-svg.append("g")
-   .attr("class", 'legendLinear {{ attribute_name }}_Legend')
-   .attr("transform", "translate(20,140)");
-
-var {{ attribute_name }}_Legend = d3.legendColor()
-                     .shapeWidth(30)
-                     .orient('vertical')
-                     .scale(color["{{ attribute_name}}"])
-                     .title("{{ attribute_name}}");
-
-svg.select('.{{ attribute_name }}_Legend').call({{ attribute_name }}_Legend)
-svg.select('.{{ attribute_name }}_Legend').style("opacity",0);
-
-{% endfor %}
+$("#repulsion_strength").change(function(){
+    repulsion_strength = this.value;
+    restart();
+})
 
 
 /////////////////////////////////////////////////////////////////////////////
